--- a/front-end/package.json
+++ b/front-end/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "eslint-config-trybe-frontend": "1.2.3",
     "react-router-prop-types": "^1.0.5",
+    "sass": "^1.53.0",
     "stylelint": "14.6.0",
     "stylelint-config-standard": "25.0.0",
     "stylelint-order": "5.0.0"
